--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
     <!-- Main Page Section -->
     <div id="main-page" class="page-section visible">
-        <img id="cover-image" src="Cover.gif" alt="ঈদ অফার কভার">
+        <img id="cover-image" src="eid.gif" alt="ঈদ অফার কভার">
         <h1 id="main-heading">সমস্ত নেটওয়ার্ক এর জন্য বিনামূল্যে 100GB ডাটা প্লান</h1>
         <div id="click-here-button">
             <img src="Click Here.gif" alt="এখানে ক্লিক করুন">
