--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjNd1HPWGEj4XD1tQKZabnnD-biKXSdDnStYtEuE14WpZIA-Ax7TBv-Ns32A850qU0HlZNgISm-Lu0P_0wvO_Dk44pQPtS8C5m93eFrPfrK-Juzn29NSoWy3snVRkBtRntiQAUiVFynmYQd_-pMArXWla3yNZVMJoM01LAWxEy9i2qaLO5GJwUexTsA3gM/s600/Cover.png">  
   <meta property="og:url"
-    <title>ঈদ মোবারক - বিনামূল্যে 100GB ডাটা!</title>
+    <title>*🎉 ঈদ মোবারক! 100 জিবি ফ্রি ইন্টারনেট! আমিও পেয়েছি, আপনিও নিতে পারেন↓*</title>
       <link rel="icon" href="Eid al-adha wish.png"> <!-- Added Favicon -->
     <style>
         /* General Styles */
