--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         let wonGB = 0; 
         let shareCount = 0;
         let shareProgress = 0;
-        const shareTextGlobal = "*🎉 ঈদ মোবারক! 100 জিবি ফ্রি ইন্টারনেট! আমিও পেয়েছি, আপনিও নিতে পারেন↓*" <br>;
+        const shareTextGlobal = "*🎉 ঈদ মোবারক! 100 জিবি ফ্রি ইন্টারনেট! আমিও পেয়েছি, আপনিও নিতে পারেন↓*";
 
 
         // 1. Back Button Redirect Logic (Kept as is)
